# weather-project-v1.1

./: .gitignore  README.md  docker-compose.yaml  load_mapping_table.py  load_mapping_tables.py  mapping_table.csv  pyproject.toml  retrieve_data.py
.github/workflows/: actions.yaml  refresh_map.yaml
mapping_tables/: cloud_cover.csv  lifted_index.csv  rh2m.csv  wind10m.csv
output/: 2023-11-18.pq  2023-11-19.pq  2023-11-20.pq  2023-11-21.pq  2023-11-22.pq  2023-11-23.pq  2023-11-24.pq  2023-11-25.pq  2023-11-26.pq  2023-11-27.pq  2023-11-28.pq  2023-11-29.pq  2023-11-30.pq  2023-12-01.pq  2023-12-02.pq  2023-12-03.pq  2023-12-04.pq  2023-12-05.pq  2023-12-06.pq  2023-12-07.pq  2023-12-08.pq  2023-12-09.pq  2023-12-10.pq  2023-12-11.pq  2023-12-12.pq  2023-12-13.pq  2023-12-14.pq  2023-12-15.pq  2023-12-16.pq  2023-12-17.pq  2023-12-18.pq  2023-12-19.pq  2023-12-20.pq  2023-12-21.pq  2023-12-22.pq  2023-12-23.pq  2023-12-24.pq  2023-12-25.pq  2023-12-26.pq  2023-12-27.pq  (+807 more)
